# screen-flash

./: Cargo.toml  LICENSE-MIT  README.md  README.zh.md
src/: cli.rs  color.rs  effect.rs  flash.rs  lib.rs  main.rs
src/cli/: color.rs
src/effect/: default.rs  rainbow.rs
