[package]
name = "screen-flash"
version = "0.1.0"
edition = "2024"
description = "A Windows screen flash library and CLI."
repository = "https://github.com/enximi/screen-flash"
homepage = "https://github.com/enximi/screen-flash"
readme = "README.md"
keywords = ["windows", "screen", "flash", "overlay", "cli"]
categories = ["command-line-utilities", "gui", "os::windows-apis"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
